RESOLVED FIXED29723
Division is needlessly slow in 64-bit
https://bugs.webkit.org/show_bug.cgi?id=29723
Summary Division is needlessly slow in 64-bit
Oliver Hunt
Reported 2009-09-24 15:14:50 PDT
it needs to have real codegen
Attachments
Patch v1 (11.37 KB, patch)
2009-09-24 15:16 PDT, Oliver Hunt
no flags
Patch v1 (12.51 KB, patch)
2009-09-24 17:24 PDT, Oliver Hunt
no flags
Patch v1 (12.21 KB, patch)
2009-09-24 17:38 PDT, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2009-09-24 15:16:45 PDT
Created attachment 40084 [details] Patch v1
Geoffrey Garen
Comment 2 2009-09-24 15:36:58 PDT
Comment on attachment 40084 [details] Patch v1 As I said on IRC, I think you should copy JSVALUE32_64, and convert back to int at the end in all cases other than 1/x. See JITArithmetic.cpp:992.
Gavin Barraclough
Comment 3 2009-09-24 15:43:26 PDT
Variable names j1 j11 j2 j22 ain't up to scratch, let's make them a little more descriptive. Please add the runtime assert as described to the slowcase.
Oliver Hunt
Comment 4 2009-09-24 17:24:08 PDT
Created attachment 40094 [details] Patch v1
Oliver Hunt
Comment 5 2009-09-24 17:38:02 PDT
Created attachment 40095 [details] Patch v1
Oliver Hunt
Comment 6 2009-09-24 19:44:37 PDT
Committed r48744
Note You need to log in before you can comment on or make changes to this bug.