Division is needlessly slow in 64-bit https://bugs.webkit.org/show_bug.cgi?id=29723

Reviewed by Gavin Barraclough.

Add codegen for op_div on x86-64

Canonical link: https://commits.webkit.org/40307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48744 268f45cc-cd09-0410-ab3c-d52691b4dbfc